--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "chai": "^4.3.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "express-nedb-session": "^0.1.1",
     "express-session": "^1.17.1",
     "mocha": "^8.3.0",
     "nedb": "^1.8.0",
+    "nedb-session-store": "^1.1.2",
     "path": "^0.12.7"
   }
 }
