--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.3.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-nedb-session": "^0.1.1",
     "express-session": "^1.17.1",
